feat: application update checker
